2001-11-15  Mark McLoughlin  <mark@skynet.ie>

	* panel-applet.c, panel-applet.h: start of bonobo applet API.

	* panel-applet-frame.c: add popup menus.

	* test-bonobo-applet.c: ditto.

	* Makefile.am: upd.

2001-11-15  Mark McLoughlin  <mark@skynet.ie>

	* basep-widget.c, drawer-widget.c, drawer.c: switch 
	debugging off.

	* launcher.c: (ask_about_launcher): change order of buttons as
	per usability propaganda :-)

2001-11-15  Glynn Foster  <glynn.foster@sun.com>

	* menu.c: Fix up compilation by commenting out the
	lock accelerator stuff

2001-11-14  Glynn Foster  <glynn.foster@sun.com>

	* aligned-widget.c, aligned-widget.h, basep-widget.c,
	* border-widget.c, border-widget.h, drawer-widget.c,
	* drawer.c, edge-widget.c, edge-widget.h,
	* foobar-widget.c, menu.c, panel-gconf.c, panel.c,
	* panel_config.c, panelglobalconfig.schema, session.c,
	* sliding-widget.c, sliding-widget.h:

	Fix gconf leaks - thanks to andersca
	Change the schema to cover over a problem with autohide
	panels [still needs to be fixed].
	More GObject porting and header standardization.

2001-11-12  Frank Belew  <frb@ximian.com>

	* Makefile.am: comment out SUBDIRS to fix dist targets

2001-11-12  Glynn Foster  <glynn.foster@sun.com>

	* launcher.c, main.c, session.c:, session.h: Fix up 
	  launcher loads a little so that the launchers load up
	  on the panel.

2001-11-09  Mark McLoughlin  <mark@skynet.ie>

	* session.c, session.h: move dead launchers stuff in here.

	* applet.c, applet.h: update.

2001-11-09  Mark McLoughlin  <mark@skynet.ie>

	* applet.c, applet.h: bit of namespace loving.

	* drawer.c, extern.c, gnome-run.c, launcher.c, 
	  logout.c, menu-properties.c, menu.c, 
	  panel-applet-frame.c, panel.c, session.c, 
	  status.c, swallow.c: update.

2001-11-09  Mark McLoughlin  <mark@skynet.ie>

	* applet.c, applet.h: kill horrible applets_last hack.

	* drawer.c: (load_drawer_applet):
	* drawer.h:
	* extern.c: (reserve_applet_spot):
	* gnome-panel-properties.c: