@@ -1,5 +1,12 @@
 2001-11-15  Mark McLoughlin  <mark@skynet.ie>
 
+	* panel-applet.[ch]: (panel_applet_setup_menu),
+	(panel_applet_setup_menu_from_file): impl convience functions.
+
+	* test-bonobo-applet.c: (test_applet_new): use.
+
+2001-11-15  Mark McLoughlin  <mark@skynet.ie>
+
 	* panel-applet.c, panel-applet.h: start of bonobo applet API.
 
 	* panel-applet-frame.c: add popup menus.
